[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/weapons.png" type="Texture" id=1]
[ext_resource path="res://weapons/Weapon.gd" type="Script" id=2]
[ext_resource path="res://assets/shotRed.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "muzzle_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -3.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MuzzleFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.190476, 0.157895 ), Vector2( 0, 0.158 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MuzzleFlash:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "reload"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 15, 0 ), Vector2( 3, -10 ), Vector2( 3, -10 ), Vector2( 15, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.27, 0.35, 0.42, 0.49, 0.55, 0.62, 0.69, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -82.0, -78.0, -82.0, -78.0, -82.0, -78.0, -82.0, -78.0, -82.0, 0.0 ]
}

[node name="Weapon" type="Node2D"]
script = ExtResource( 2 )

[node name="EndOfGun" type="Position2D" parent="."]
position = Vector2( 29, -3 )

[node name="GunDirection" type="Position2D" parent="."]
position = Vector2( 35, -3 )

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="WeaponSprite" type="Sprite" parent="."]
position = Vector2( 15, 0 )
scale = Vector2( 0.96875, 1 )
texture = ExtResource( 1 )
hframes = 15
vframes = 37
frame = 6

[node name="MuzzleFlash" type="Sprite" parent="."]
visible = false
position = Vector2( 36, -2 )
rotation = -1.5708
scale = Vector2( 1e-05, 0.158 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/muzzle_flash = SubResource( 1 )
anims/reload = SubResource( 2 )
